--- a/TESB/mobil.html
+++ b/TESB/mobil.html
@@ -9,14 +9,18 @@
 
 <div class="container">
 
-  <a href="index.html">⬅ Kembali ke Menu</a>
+  <a href="index.html">← Kembali ke Menu</a>
 
   <h2>Pencarian Data Mobil</h2>
 
+  <!-- INPUT HARUS DI DALAM CONTAINER -->
   <input type="text" id="searchInput" placeholder="Cari data mobil...">
 
+  <!-- TABLE JUGA DI DALAM CONTAINER -->
   <table>
-    <thead><tr id="tableHead"></tr></thead>
+    <thead>
+      <tr id="tableHead"></tr>
+    </thead>
     <tbody id="tableBody"></tbody>
   </table>
 
