--- a/TESB/mobil.html
+++ b/TESB/mobil.html
@@ -16,16 +16,19 @@
   <!-- INPUT HARUS DI DALAM CONTAINER -->
   <input type="text" id="searchInput" placeholder="Cari data mobil...">
 
-  <!-- TABLE JUGA DI DALAM CONTAINER -->
-  <table>
-    <thead>
-      <tr id="tableHead"></tr>
-    </thead>
-    <tbody id="tableBody"></tbody>
-  </table>
+  <!-- TABLE JUGA DI DALAM CONTAINER --> 
+  <div class="table-wrapper">
+    <table>
+      <thead>
+        <tr id="tableHead"></tr>
+      </thead>
+      <tbody id="tableBody"></tbody>
+    </table>
+  </div>
 
 </div>
 
 <script src="script.js"></script>
 </body>
 </html>
+
