--- a/TESB/mola.html
+++ b/TESB/mola.html
@@ -15,13 +15,18 @@
 
 <input type="text" id="searchInput" placeholder="Cari data mobil mola...">
 
-<table>
-  <thead><tr id="tableHead"></tr></thead>
-  <tbody id="tableBody"></tbody>
-</table>
+  <div class="table-wrapper">
+    <table>
+      <thead>
+        <tr id="tableHead"></tr>
+      </thead>
+      <tbody id="tableBody"></tbody>
+    </table>
+  </div>
 
 </div>
 
 <script src="script-mola.js"></script>
 </body>
 </html>
+
